--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@turf/boolean-point-in-polygon": "^7.2.0",
+    "@turf/helpers": "^7.2.0",
+    "@turf/turf": "^7.2.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -47,7 +50,7 @@
     "date-fns": "4.1.0",
     "deck.gl": "^9.1.11",
     "embla-carousel-react": "8.5.1",
-    "htm-trixel": "^0.1.0",
+    "htm-trixel": "^0.1.1",
     "immer": "latest",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
@@ -70,7 +73,7 @@
   },
   "devDependencies": {
     "@types/geojson": "^7946.0.16",
-    "@types/node": "^22",
+    "@types/node": "^22.15.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
