--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.31.1",
     "@deck.gl/core": "^9.1.11",
     "@deck.gl/layers": "^9.1.11",
     "@deck.gl/mapbox": "^9.1.11",
@@ -40,6 +41,12 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@solana/wallet-adapter-base": "^0.9.26",
+    "@solana/wallet-adapter-phantom": "^0.9.27",
+    "@solana/wallet-adapter-react": "0.15.38",
+    "@solana/wallet-adapter-react-ui": "0.9.38",
+    "@solana/wallet-adapter-wallets": "0.19.36",
+    "@solana/web3.js": "^1.98.2",
     "@turf/boolean-point-in-polygon": "^7.2.0",
     "@turf/helpers": "^7.2.0",
     "@turf/turf": "^7.2.0",
@@ -55,11 +62,11 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "maplibre-gl": "^5.5.0",
-    "next": "15.2.4",
+    "next": "^14.2.0",
     "next-themes": "^0.4.4",
-    "react": "^19",
+    "react": "^18.2.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
@@ -72,12 +79,22 @@
     "zustand": "latest"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
     "@types/geojson": "^7946.0.16",
     "@types/node": "^22.15.17",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "eslint": "^9.26.0",
+    "eslint-config-next": "^14.2.0",
+    "pino-pretty": "^10.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
+  },
+  "pnpm": {
+    "overrides": {
+      "react": "^18.3.1",
+      "react-dom": "^18.3.1"
+    }
   }
 }
